--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <title>Sell ETC Safely</title>
 
+    <!--Favicon-->
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/favicon.png">
+
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
